syntax = "proto3";

package types;

import "lib/common/base.proto";
//import "repos/protobuf/gogoproto/gogo.proto";

option go_package = "github.com/RosettaFlow/Carrier-Go/lib/types";

// IdentityData represents the stored data structure.
message IdentityPB {
  string identity_id = 1;
  string node_id = 2;
  string node_name = 3;
  string data_id = 4;
  // the status of data for local storage, 1 means valid, 2 means invalid
  api.protobuf.DataStatus data_status = 5;
  // the status of data for datacenter, 1 means valid, 2 means invalid
  api.protobuf.CommonStatus status = 6;
  // json format for credential
  string credential = 7;
  // v 3.0
  uint64 update_at = 8;         // UTC毫秒数
  // the link of face image (with a length limit)
  string image_url = 9;
  // description of the node (with a length limit)
  string details = 10;
}
